<resources>
    <string name="app_name">Door Step Tailors</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string-array name="tailor_name">
        <item>ABC Tailors</item>
        <item>XYZ Tailors</item>
        <item>123 Tailors</item>

    </string-array>

    <string-array name="item1">
        <item> 2X Kamiz </item>
        <item> 2X Pant </item>
        <item> 4X Shirt </item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sample">Sample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="signin_as">SignIn As:</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="kids">Kids</string>
</resources>
