<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">
    <ImageView
        android:id="@+id/looImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/doorsteptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/alconica"
        android:layout_below="@id/looImage"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent"
        android:text="Door Step Tailor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></TextView>
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonshape"
        android:ems="10"
        android:fontFamily="@font/alconica"
        android:hint="Enter Your Name"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="14sp"

        android:layout_below="@id/doorsteptext"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/alconica"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="14sp"

        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/Email"
        android:background="@drawable/buttonshape"
        android:ems="11"
        android:fontFamily="@font/alconica"
        android:hint="Phone Number"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/phone"
        android:background="@drawable/buttonshape"
        android:ems="10"
        android:fontFamily="@font/alconica"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />
    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/password"
        android:background="@drawable/buttonshape"
        android:ems="10"
        android:fontFamily="@font/alconica"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />
    <TextView
        android:id="@+id/signinas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/signin_as"
        android:textStyle="bold"
        android:fontFamily="@font/alconica"
        android:layout_below="@id/confirmpassword"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:textSize="20dp"/>
    <RadioGroup
        android:id="@+id/RadioGRPsId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/alconica"
        android:layout_below="@id/signinas"
        android:layout_margin="30dp">
        <RadioButton
            android:id="@+id/SelectRadioTailorId"
            android:layout_width="match_parent"
            android:fontFamily="@font/alconica"

            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="Tailor"
            />
        <RadioButton
            android:id="@+id/SelectRadioCustomerId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alconica"
            android:textColor="@color/colorAccent"
            android:text="Customer"
            android:checked="true"
            />
    </RadioGroup>
    <Button
        android:id="@+id/reg_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg"
        android:layout_below="@id/RadioGRPsId"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/alconica"
        android:text="@string/register"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/already_have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/alconica"
        android:layout_below="@id/reg_Btn"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent"
        android:text="Aready have Account?Login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></TextView>



</RelativeLayout>